--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
   </head>
 
   <body>
-    <div id="root">`</div>
+    <div id="root">{{{body}}}</div>
     <script src='https://www.google.com/recaptcha/api.js?onload=getCaptchaResponse&render=explicit' async defer></script>
   </body>
 
