--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,9 @@
     <meta name="google-site-verification" content="_vbJFI4AMM91De7hZDgbXxW_zL6A1fRdaAhiMl_yNRk" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
+
+    <script src="https://www.google.com/recaptcha/api.js" async defer></script>
+
     <title>Matthew Ailes</title>
   </head>
 
