--- a/packages/website/public/index.html
+++ b/packages/website/public/index.html
@@ -4,6 +4,7 @@
   <head>
     <meta charset="utf-8">
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
+    <link href="https://fonts.googleapis.com/css?family=Fira+Sans:300,400,700" rel="stylesheet">
     <title>Matthew Ailes</title>
   </head>
 
