--- a/packages/website/public/index.html
+++ b/packages/website/public/index.html
@@ -3,8 +3,11 @@
 
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width,height=device-height,initial-scale=1.0"/>
+
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
     <link href="https://fonts.googleapis.com/css?family=Fira+Sans:300,400,700" rel="stylesheet">
+
     <title>Matthew Ailes</title>
   </head>
 
