--- a/packages/ui/src/index.html
+++ b/packages/ui/src/index.html
@@ -3,16 +3,32 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=5.0">
+
   <title>Stencil Component Starter</title>
+
+  <link rel="stylesheet" type="text/css" href="/build/mattailes.css">  
   <script type="module" src="/build/mattailes.mjs.js"></script>
   <script nomodule src="/build/mattailes.js"></script>
-
 </head>
-<body>
 
+<body>
   <h1 style="color: red">
     <ma-pause-icon></ma-pause-icon>
   </h1>
 
+  <ma-button id="button">Click me!</ma-button>
+  <div id="count">Count: 0</div>
+
+  <script>
+    let initCount = 0;
+    const div = document.getElementById('count');
+    const button = document.getElementById('button')
+
+    button.addEventListener('click', () => {
+      initCount++
+
+      div.textContent = `Count: ${initCount}`
+    })
+  </script>
 </body>
 </html>
