--- a/packages/ui/src/index.html
+++ b/packages/ui/src/index.html
@@ -7,7 +7,7 @@
   <title>Stencil Component Starter</title>
 
   <link rel="stylesheet" type="text/css" href="/build/mattailes.css">  
-  <script type="module" src="/build/mattailes.mjs.js"></script>
+  <script type="module" src="/build/mattailes.esm.js"></script>
   <script nomodule src="/build/mattailes.js"></script>
 </head>
 
